# routes/route.go
@@ -72,6 +72,7 @@ func SetupRoute(e *echo.Echo) {
 	v1 := e.Group("/api/v1")
 	{
 		v1.POST("/login", authHandler.Login)
+		v1.POST("/question", questionHandler.Insert, _middleware.IsLoggedIn)
 		v1.GET("/profile", userHandler.Profile, _middleware.IsLoggedIn)
 		v1.GET("/question", questionHandler.All, _middleware.IsLoggedIn)
 		v1.GET("/question/:id", questionHandler.FindById, _middleware.IsLoggedIn)
